at least it's a nice picture now

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html><head><title>Rockstar Robots!</title></head>
+<html><head>
+    <title>Rockstar Robots!</title>
+    <link rel="stylesheet" href="styles/style.css">
+    </head>
 <body>
-ROCKSTAR ROBOTS WELCOMES YOU
-
-making cool stuff since 1880
+<div class="container">
+  <img src="images/rr.jpg" />
+</div>
+<center><a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a></center>
 </body>
 </html>
