Indented, replaced center tag with style

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<html><head>
-    <title>Rockstar Robots!</title>
-    <link rel="stylesheet" href="styles/style.css">
+<html>
+    <head>
+        <title>Rockstar Robots!</title>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
-<body>
-<center>dev</center>
-<div class="container">
-  <img src="images/rr.jpg" />
-</div>
-<center><a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a></center>
-</body>
+    <body>
+        <center>dev</center>
+        <div class="container">
+            <img src="images/rr.jpg" />
+        </div>
+        <div class="mailto">
+            <a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a>
+        </div>
+    </body>
 </html>
