--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
-<center>beta</center>
+<center>beta testing</center>
 <div class="container">
   <img src="images/rr.jpg" />
 </div>
