added word at the top of the code.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
 <body>
 <!-- dope code!! -->
+<!-- MENTORS ARE DAVID UNDERWOOD, EMILY BAKER, AND RYAN BAKER -->
+hello people of the world will come together and have the biggest party in the history of the world!
+
 <div class="container">
   <img src="images/rr.jpg" />
 </div>
