added wording to the top of the page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
-<center>beta testing</center>
+<!-- dope code!! --> <center>You are looking at the Rockstar Robots home page. We are a team of 7 girls that love to build with legos and we will make a robot that can do different tasks for us. Whether it is pushing a lever to moving an a lego piece or even just moving to a certain spot on a mat. We hope you can join us next year!</center>
+
 <div class="container">
   <img src="images/rr.jpg" />
 </div>
