adjusted wording at the top

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
-<!-- dope code!! --> <center>You are looking at the Rockstar Robots home page. We are a team of 7 girls that love to build with legos and we will make a robot that can do different tasks for us. Whether it is pushing a lever to moving an a lego piece or even just moving to a certain spot on a mat. We hope you can join us next year!</center>
-
+<!-- dope code!! -->
+<center>
+    You are looking at the Rockstar Robots home page that we have created to show you how much fun you can have with legos. In some time you will see some pictures of the team working to make a robot or a lego structure we have built all together.We are a team of 7 totally rad kids working to build a robot. The robot might have to push a lever, pull an object, lift a lego, or even just rotate a lever made from legos. We hope this inspired you to start playing with legos or mabe join a team an be a real helper to your team. And most important of all have fun doing what you are doing with legos and building a robot that is programed to do some amazing thing. BYE!!
+</center>
 <div class="container">
   <img src="images/rr.jpg" />
 </div>
