--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="styles/style.css">
     </head>
 <body>
+    hello
 <div class="container">
   <img src="images/rr.jpg" />
 </div>
