--- a/index.html
+++ b/index.html
@@ -1,15 +1,96 @@
-<html>
+<?xml version="1.0" encoding="UTF-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Rockstar Robots!</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <meta charset="utf-8" />
+        <title>Rockstar Robots</title>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <link href="5bca2f7ff0fcc502b084045d/css/stolen.css" rel="stylesheet" type="text/css" />
+        <script src="ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript"></script>
+        <script type="text/javascript">WebFont.load({  google: {    families: ["Roboto:300,regular,500","Roboto Condensed:300,regular"]  }});</script>
+        <!--[if lt IE 9]>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script>
+        <![endif]-->
+        <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
     </head>
+
     <body>
-        <center>dev</center>
-        <div class="container">
-            <img src="images/rr.jpg" />
+        <div id="header" class="header">
+            <div class="w-container">
+                <div class="navigation">
+                    <h1 class="logo">
+                        <a href="#header" class="logo-link w-inline-block">Rockstar<br />Robots</a></h1>
+                    <a href="#landing-paragraphs" class="nav-link w--current">About us</a>
+                    <a href="#biographies" class="nav-link">See Us</a>
+                    <a href="#gallery" class="nav-link">Gallorize Us</a>
+                    <a href="#other" class="nav-link">Sponsor Us</a>
+                </div>
+            </div>
         </div>
-        <div class="mailto">
-            <a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a>
+
+        <div id="landing-paragraphs" class="section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>About Us</h2>
+                    </div>
+                    <div class="w-col w-col-8">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div id="biographies" class="section green">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>Aren't we cute?</h2>
+                    </div>
+                    <div class="w-col w-col-8">
+                        <h3>Child Name</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="gallery" class="section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>Gallery</h2>
+                    </div>
+                    <div class="w-col w-col-8">
+                        <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Image Title</a></h2>
+                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 14  •  Practice</a></p>
+                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
+                        <p><img src="img/img1.png" alt="" /></p>
+                        <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Another Image</a></h2>
+                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 15  •  Competition</a></p>
+                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
+                        <p><img src="img/img2.png" alt="" /></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="other" class="section green">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>Give us all the monies</h2>
+                    </div>
+                    <div class="w-col w-col-8">
+                        Nah, we're good.  Our sponsors are the best.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
+        <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
     </body>
 </html>
