--- a/index.html
+++ b/index.html
@@ -48,10 +48,34 @@
                         <h2>Aren't we cute?</h2>
                     </div>
                     <div class="w-col w-col-8">
-                        <h3>Child Name</h3>
+                        <h3>Child Name 1</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name</h3>
+                        <h3>Child Name 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name 4</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name 5</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name 6</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Child Name 7</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Dave</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Adult Name 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Adult Name 3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
                     </div>
@@ -65,6 +89,7 @@
                         <h2>Gallery</h2>
                     </div>
                     <div class="w-col w-col-8">
+                        <!-- If you don't want to click on these, we can remove the href and do something else -->
                         <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Image Title</a></h2>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 14  •  Practice</a></p>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
