--- a/index.html
+++ b/index.html
@@ -117,5 +117,13 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+        <a class="w-sponsor-badge-top" href="https://www.davesfavoritebeer.com">
+            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
+            <img src="img/sponsor1.png" style="margin-right: 8px; width: 56px;" />
+        </a>
+        <a class="w-sponsor-badge" href="https://www.davesfavoritethings.com">
+            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
+            <img src="img/sponsor2.jpg" style="margin-right: 8px; width: 56px;" />
+        </a>
     </body>
 </html>
