--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                         <a href="#header" class="logo-link w-inline-block">Rockstar<br />Robots</a></h1>
                     <a href="#landing-paragraphs" class="nav-link w--current">About us</a>
                     <a href="#biographies" class="nav-link">See Us</a>
+                    <!--
                     <a href="#gallery" class="nav-link">Gallorize Us</a>
+                    -->
                     <a href="#other" class="nav-link">Sponsor Us</a>
                 </div>
             </div>
@@ -34,9 +36,11 @@
                         <h2>About Us</h2>
                     </div>
                     <div class="w-col w-col-8">
+                        <p>We are a team of lego fanatics working on solving the problems of space.</p>
+                        <!--
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        -->
                     </div>
                 </div>
             </div>
@@ -48,40 +52,43 @@
                         <h2>Aren't we cute?</h2>
                     </div>
                     <div class="w-col w-col-8">
+                        <!--
                         <h3>Child Name 1</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        -->
+                        <h3>Sophie Baker</h3>
+                        <p>Lego Master.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Lasya Chavadam</h3>
+                        <p>Lego Master.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 4</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Isabel Durant</h3>
+                        <p>Lego Master.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 5</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Advika Govindaraju</h3>
+                        <p>Lego Master.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 6</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Saanvi Mathur</h3>
+                        <p>Lego Master.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Child Name 7</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Emme Underwood</h3>
+                        <p>Lego Master.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Dave</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <h3>Emily Baker</h3>
+                        <p>Wrangler of Lego Masters.</p>
+                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Ryan Baker</h3>
+                        <p>Wrangler of Lego Masters.</p>
                         <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Adult Name 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
-                        <h3>Adult Name 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                        <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
+                        <h3>Dave Underwood</h3>
+                        <p>When not wrangling Lego Masters Dave enjoys snowboarding, kayaking, and throwing a frisbee.</p>
+                        <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
                     </div>
                 </div>
             </div>
         </div>
+        <!--
         <div id="gallery" class="section">
             <div class="w-container">
                 <div class="w-row">
@@ -89,7 +96,6 @@
                         <h2>Gallery</h2>
                     </div>
                     <div class="w-col w-col-8">
-                        <!-- If you don't want to click on these, we can remove the href and do something else -->
                         <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Image Title</a></h2>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 14  •  Practice</a></p>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
@@ -102,14 +108,15 @@
                 </div>
             </div>
         </div>
+        -->
         <div id="other" class="section green">
             <div class="w-container">
                 <div class="w-row">
                     <div class="align-right w-col w-col-4">
-                        <h2>Give us all the monies</h2>
+                        <h2>Sponser Us!</h2>
                     </div>
                     <div class="w-col w-col-8">
-                        Nah, we're good.  Our sponsors are the best.
+                        <a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -117,13 +124,17 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-        <a class="w-sponsor-badge-top" href="https://www.davesfavoritebeer.com">
+        <a class="w-sponsor-badge" href="http://scte-ne.weebly.com/">
             <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
-            <img src="img/sponsor1.png" style="margin-right: 8px; width: 56px;" />
+            <img src="img/scte.jpg" style="margin-right: 8px; width: 56px;" />
         </a>
-        <a class="w-sponsor-badge" href="https://www.davesfavoritethings.com">
+        <a class="w-sponsor-badge-top" href="http://wbninc.com/">
             <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
-            <img src="img/sponsor2.jpg" style="margin-right: 8px; width: 56px;" />
+            <img src="img/wbn.jpg" style="margin-right: 8px; width: 56px;" />
+        </a>
+        <a class="w-sponsor-badge-top" href="https://www.wict.org/">
+            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
+            <img src="img/wict.jpg" style="margin-right: 8px; width: 56px;" />
         </a>
     </body>
 </html>
