--- a/index.html
+++ b/index.html
@@ -132,9 +132,12 @@
             <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
             <img src="img/wbn.jpg" style="margin-right: 8px; width: 56px;" />
         </a>
+        <!--
+        how to added 3rd sponser? update CSS?
         <a class="w-sponsor-badge-top" href="https://www.wict.org/">
             <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
             <img src="img/wict.jpg" style="margin-right: 8px; width: 56px;" />
         </a>
+        -->
     </body>
 </html>
