snowboarding image added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Dave Underwood</h3>
                         <p>When not wrangling Lego Masters Dave enjoys snowboarding, kayaking, and throwing a frisbee.</p>
-                        <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
+                        <img src="img/dave_snowboard.jpg" width="125" alt="" class="thumbnail" />
                     </div>
                 </div>
             </div>
