emme pic updated with description

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <p>Lego Master.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Emme Underwood</h3>
-                        <p>Lego Master.</p>
-                        <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
+                        <p>When not solving problems in space with Legos Emme is kicking it with her Brown Belt in Kenpo Karate, starting her rap career, or ripping up trails snowboarding.</p>
+                        <img src="img/emme.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Emily Baker</h3>
                         <p>Wrangler of Lego Masters.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
