wording of about us

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h2>About Us</h2>
                     </div>
                     <div class="w-col w-col-8">
-                        <p>We are a team of lego fanatics working on solving the problems of space.</p>
+                        <p>We are a team of Lego fanatics working on solving the problems of space for the First Lego League.</p>
                         <!--
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
