--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p>Lego Master.</p>
                         <img src="img/cutekid.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Emme Underwood</h3>
-                        <p>When not solving problems in space with Legos Emme is kicking it with her Brown Belt in Kenpo Karate, starting her rap career, or ripping up trails snowboarding.</p>
+                        <p>When not solving problems in space with Legos, Emme is kicking it with her Brown Belt in Kenpo Karate, starting her rap career, or ripping up trails snowboarding.</p>
                         <img src="img/emme.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Emily Baker</h3>
                         <p>Wrangler of Lego Masters.</p>
@@ -85,7 +85,7 @@
                         <p>Wrangler of Lego Masters.</p>
                         <img src="img/du.jpg" width="125" alt="" class="thumbnail" />
                         <h3>Dave Underwood</h3>
-                        <p>When not wrangling Lego Masters Dave enjoys snowboarding, kayaking, and throwing a frisbee.</p>
+                        <p>When not wrangling Lego Masters, Dave enjoys snowboarding, kayaking, and throwing a frisbee.</p>
                         <img src="img/dave_snowboard.jpg" width="125" alt="" class="thumbnail" />
                     </div>
                 </div>
@@ -112,11 +112,25 @@
             </div>
         </div>
         -->
+        <div id="sponsors" class="section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>Our Sponsors</h2>
+                    </div>
+                    <div class="w-col w-col-8">
+                        <div><img src="img/scte.jpg" style="margin-right: 8px;" /></div>
+                        <div><img src="img/wbn.jpg" style="margin-right: 8px;" /></div>
+                        <div><img src="img/wict.jpg" style="margin-right: 8px;" /></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="other" class="section green">
             <div class="w-container">
                 <div class="w-row">
                     <div class="align-right w-col w-col-4">
-                        <h2>Sponser Us!</h2>
+                        <h2>Sponsor Us!</h2>
                     </div>
                     <div class="w-col w-col-8">
                         <a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a>
@@ -127,20 +141,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-        <a class="w-sponsor-badge" href="http://scte-ne.weebly.com/">
-            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
-            <img src="img/scte.jpg" style="margin-right: 8px; width: 56px;" />
+        <a class="w-sponsor-badge" href="#sponsors">
+            Our Sponsors! ❤️
         </a>
-        <a class="w-sponsor-badge-top" href="http://wbninc.com/">
-            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
-            <img src="img/wbn.jpg" style="margin-right: 8px; width: 56px;" />
-        </a>
-        <!--
-        how to added 3rd sponser? update CSS?
-        <a class="w-sponsor-badge-top" href="https://www.wict.org/">
-            <img src="img/sponsoredby.jpg" style="margin-right: 8px; width: 56px;" />
-            <img src="img/wict.jpg" style="margin-right: 8px; width: 56px;" />
-        </a>
-        -->
+        
     </body>
 </html>
