Added non-jumpable section for adults

--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
                         <h3>Emme Underwood</h3>
                         <p>When not solving problems in space with Legos, Emme is kicking it with her Brown Belt in Kenpo Karate, starting her rap career, or ripping up trails snowboarding.</p>
                         <img src="img/emme.jpg" width="125" alt="" class="thumbnail" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="biographies" class="section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>"Adults"</h2>
+                    </div>
+                    <div class="w-col w-col-8">
                         <h3>Emily Baker</h3>
                         <p>Wrangler of Lego Masters.</p>
                         <img src="img/ccgirl.jpg" width="125" alt="" class="thumbnail" />
@@ -112,7 +123,7 @@
             </div>
         </div>
         -->
-        <div id="sponsors" class="section">
+        <div id="sponsors" class="section green">
             <div class="w-container">
                 <div class="w-row">
                     <div class="align-right w-col w-col-4">
@@ -126,7 +137,7 @@
                 </div>
             </div>
         </div>
-        <div id="other" class="section green">
+        <div id="other" class="section">
             <div class="w-container">
                 <div class="w-row">
                     <div class="align-right w-col w-col-4">
