--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+        <div>
         <a class="w-sponsor-badge" href="#sponsors">
-            Our Sponsors! ❤️
+            <span class="oursponsors">Our Sponsors!</span> <span class="blink" style="display: inline;">❤️</span>
         </a>
-        
+        </div>
     </body>
 </html>
