--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     <!--
                     <a href="#gallery" class="nav-link">Gallorize Us</a>
                     -->
-                    <a href="#other" class="nav-link">Our Sponsors</a>
+                    <a href="#sponsors" class="nav-link">Our Sponsors</a>
+                    <a href="#contact" class="nav-link">Contact Us</a>
                 </div>
             </div>
         </div>
@@ -202,7 +203,7 @@
                 </div>
             </div>
         </div>
-        <div id="other" class="section">
+        <div id="contact" class="section">
             <div class="w-container">
                 <div class="w-row">
                     <div class="align-right w-col w-col-4">
@@ -210,6 +211,9 @@
                     </div>
                     <div class="w-col w-col-8">
                         <a href="mailto:rockstar.robots@gmail.com">rockstar.robots@gmail.com</a>
+                    </div>
+                    <div class="w-col w-col-8">
+                        Our <a href="https://calendar.google.com/calendar/b/2?cid=cm9ja3N0YXIucm9ib3RzQGdtYWlsLmNvbQ">Calendar</a>
                     </div>
                 </div>
             </div>
