--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <script src="5bca2f7ff0fcc502b084045d/js/stolen.js" type="text/javascript"></script>
         <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
         <div>
-        <a class="w-sponsor-badge" href="#sponsors">
+        <a class="w-sponsor-badge pointer" href="#sponsors">
             <span class="oursponsors">Our Sponsors!</span> <span class="blink" style="display: inline;">❤️</span>
         </a>
         </div>
