added first gallery image

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                         <a href="#header" class="logo-link w-inline-block">Rockstar<br />Robots</a></h1>
                     <a href="#landing-paragraphs" class="nav-link w--current">About us</a>
                     <a href="#biographies" class="nav-link">See Us</a>
-                    <!--
                     <a href="#gallery" class="nav-link">Gallorize Us</a>
-                    -->
                     <a href="#sponsors" class="nav-link">Our Sponsors</a>
                     <a href="#contact" class="nav-link">Contact Us</a>
                 </div>
@@ -186,7 +184,7 @@
             </div>
         </div>
 
-        <!--
+
         <div id="gallery" class="section">
             <div class="w-container">
                 <div class="w-row">
@@ -194,19 +192,19 @@
                         <h2>Gallery</h2>
                     </div>
                     <div class="w-col w-col-8">
-                        <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Image Title</a></h2>
-                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 14  •  Practice</a></p>
-                        <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
-                        <p><img src="img/img1.png" alt="" /></p>
+                        <h2><div class="journal-entry w-inline-block">Practice at Hannaford</div></h2>
+                        <p><img src="img/hannaford01.jpg" alt="" /></p>
+                        <!--
                         <h2><a href="/image-specific-page" class="journal-entry w-inline-block">Another Image</a></h2>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">January 15  •  Competition</a></p>
                         <p><a href="/image-specific-page" class="journal-entry w-inline-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor...</a></p>
                         <p><img src="img/img2.png" alt="" /></p>
+                        -->
                     </div>
                 </div>
             </div>
         </div>
-        -->
+
 
         <div id="sponsors" class="section green">
             <div class="w-container">
