added video and movie

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="#landing-paragraphs" class="nav-link w--current">About us</a>
                     <a href="#biographies" class="nav-link">See Us</a>
                     <a href="#gallery" class="nav-link">Gallorize Us</a>
+                    <a href="#video" class="nav-link">Our Video</a>
                     <a href="#sponsors" class="nav-link">Our Sponsors</a>
                     <a href="#contact" class="nav-link">Contact Us</a>
                 </div>
@@ -239,6 +240,17 @@
             </div>
         </div>
 
+        <div id="video" class="section">
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="align-right w-col w-col-4">
+                        <h2>Moving Pictures</h2>
+                    </div>
+                    <div>Our first working mission!</div>
+                    <video controls="controls" width="200" height="320" name="Video Name" src="img/success.mov"></video>
+                </div>
+            </div>
+        </div>
 
         <div id="sponsors" class="section green">
             <div class="w-container">
