--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a href="#header" class="logo-link w-inline-block">Rockstar<br />Robots</a></h1>
                     <a href="#landing-paragraphs" class="nav-link w--current">About us</a>
                     <a href="#biographies" class="nav-link">See Us</a>
-                    <a href="#gallery" class="nav-link">Gallorize Us</a>
+                    <a href="#gallery" class="nav-link">Us in Action</a>
                     <a href="#video" class="nav-link">Our Video</a>
                     <a href="#sponsors" class="nav-link">Our Sponsors</a>
                     <a href="#contact" class="nav-link">Contact Us</a>
